essential: Fix uncommented ansible_managed

--- a/roles/essential/templates/resolv.conf.j2
+++ b/roles/essential/templates/resolv.conf.j2
@@ -1,5 +1,5 @@
 #jinja2: lstrip_blocks: True
-{{ ansible_managed }}
+# {{ ansible_managed }}
 
 {% for interface in interfaces %}
 {% if interface.network is defined and networks[interface.network].domain is defined %}
