--- a/roles/snmpd/templates/snmpd.conf.j2
+++ b/roles/snmpd/templates/snmpd.conf.j2
@@ -201,3 +201,8 @@ extend-sh mailq    /usr/bin/mailq|tail -n1|sed -r -e 's/^.*in ([0-9]+) Requests.
                                            #  Listen for network connections (from localhost)
                                            #    rather than the default named socket /var/agentx/master
 #agentXSocket    tcp:localhost:705
+{% if inventory_hostname in groups.dellservers %}
+
+# Allow Systems Management Data Engine SNMP to connect to snmpd using SMUX
+smuxpeer .1.3.6.1.4.1.674.10892.1
+{% endif %}
