--- a/roles/snmpd/templates/snmpd.conf.j2
+++ b/roles/snmpd/templates/snmpd.conf.j2
@@ -12,7 +12,7 @@
 #
 
 #  Listen for connections from the local system only
-agentAddress  udp:{{ networks[interfaces[0].network].prefix + ipnum|string }}:161
+agentAddress  udp:{% if ipnum is defined %}{{ networks[interfaces[0].network].prefix + ipnum|string }}{% else %}{{ interfaces[0].address }}{% endif %}:161
 #  Listen for connections on all interfaces (both IPv4 *and* IPv6)
 #agentAddress udp:161,udp6:[::1]:161
 
@@ -164,7 +164,7 @@ linkUpDownNotifications  yes
 # extend    test1   /bin/echo  Hello, world!
 # extend-sh test2   echo Hello, world! ; echo Hi there ; exit 35
 # extend-sh test3   /bin/sh /tmp/shtest
-{% if inventory_hostname in groups.mailservers %}
+{% if inventory_hostname in groups.mailservers|default([]) %}
 extend-sh mailq    /usr/bin/mailq|tail -n1|sed -r -e 's/^.*in ([0-9]+) Requests.$/\1/' -e 's/^.*empty.*$/0/'
 {% endif %}
 
@@ -201,7 +201,7 @@ extend-sh mailq    /usr/bin/mailq|tail -n1|sed -r -e 's/^.*in ([0-9]+) Requests.
                                            #  Listen for network connections (from localhost)
                                            #    rather than the default named socket /var/agentx/master
 #agentXSocket    tcp:localhost:705
-{% if inventory_hostname in groups.dellservers %}
+{% if inventory_hostname in groups.dellservers|default([]) %}
 
 # Allow Systems Management Data Engine SNMP to connect to snmpd using SMUX
 smuxpeer .1.3.6.1.4.1.674.10892.1
