sshconf: Also apply to desktop group

--- a/roles/sshconf/templates/ssh_config.j2
+++ b/roles/sshconf/templates/ssh_config.j2
@@ -1,4 +1,4 @@
-{% for host in groups.servers %}
+{% for host in groups.servers + groups.desktops %}
 {% set hv = hostvars[host] %}
 Host {{ host }}
     User root
