--- a/roles/logging/templates/rsyslog.conf.j2
+++ b/roles/logging/templates/rsyslog.conf.j2
@@ -8,8 +8,8 @@
 #### MODULES ####
 #################
 
-$ModLoad imuxsock # provides support for local system logging
-$ModLoad imklog   # provides kernel logging support
+module(load="imuxsock") # provides support for local system logging
+module(load="imklog")   # provides kernel logging support
 #$ModLoad immark  # provides --MARK-- message capability
 
 # provides UDP syslog reception
@@ -20,9 +20,8 @@ $ModLoad imklog   # provides kernel logging support
 
 # provides TCP syslog reception
 $ModLoad imtcp
-$InputTCPServerRun 514
-$TCPServerAddress {{ networks[interfaces[0].network].prefix + ipnum|string }}
 
+input(type="imtcp" port="514")
 {% endif %}
 
 ###########################
@@ -62,15 +61,17 @@ $IncludeConfig /etc/rsyslog.d/*.conf
 
 {% if inventory_hostname in groups.monitoringservers %}
 
-if $fromhost-ip startswith '10.88.' then /var/log/network.log
+if $fromhost-ip startswith '{{ monitored_subnet }}' then /var/log/network.log
 
-& ~
+& stop
 
 {% endif %}
 
+{% if inventory_hostname in groups.servers %}
 {% for mon_host in groups.monitoringservers %}
 *.* @@{{ mon_host }}:514
 {% endfor %}
+{% endif %}
 
 
 #
