--- a/roles/mysql/templates/my.cnf.j2
+++ b/roles/mysql/templates/my.cnf.j2
@@ -37,14 +37,14 @@ pid-file	= /var/run/mysqld/mysqld.pid
 socket		= /var/run/mysqld/mysqld.sock
 port		= 3306
 basedir		= /usr
-{% if mysql_datadir is defined %}
-datadir		= {{ mysql_datadir }}
-{% else %}
-datadir		= /var/lib/mysql
-{% endif %}
+datadir		= {{ mysql_datadir|default("/var/lib/mysql") }}
 tmpdir		= /tmp
 lc-messages-dir	= /usr/share/mysql
 skip-external-locking
+
+# Fulltext
+ft_min_word_len = 3
+
 #
 # Instead of skip-networking the default is now to listen only on
 # localhost which is more compatible and is not less secure.
@@ -56,14 +56,14 @@ bind-address = 127.0.0.1
 #
 # * Fine Tuning
 #
-key_buffer		= 16M
+key_buffer		= 384M
 max_allowed_packet	= 16M
 thread_stack		= 192K
 thread_cache_size       = 8
 # This replaces the startup script and checks MyISAM tables if needed
 # the first time they are touched
 myisam-recover         = BACKUP
-#max_connections        = 100
+max_connections        = 400
 #table_cache            = 64
 #thread_concurrency     = 10
 #
@@ -71,6 +71,8 @@ myisam-recover         = BACKUP
 #
 query_cache_limit	= 1M
 query_cache_size        = 16M
+
+open_files_limit        = 2048
 #
 # * Logging and Replication
 #
@@ -128,13 +130,13 @@ max_binlog_size = 512M
 [mysqldump]
 quick
 quote-names
-max_allowed_packet	= 16M
+max_allowed_packet	= 1024M
 
 [mysql]
 #no-auto-rehash	# faster start of mysql but no tab completition
 
 [isamchk]
-key_buffer		= 16M
+key_buffer		= 32M
 
 #
 # * IMPORTANT: Additional settings that can override those from this file!
