--- a/roles/phpwebserver/templates/php.ini.j2
+++ b/roles/phpwebserver/templates/php.ini.j2
@@ -199,7 +199,7 @@ engine = On
 ; Development Value: Off
 ; Production Value: Off
 ; http://php.net/short-open-tag
-short_open_tag = Off
+short_open_tag = On
 
 ; Allow ASP-style <% %> tags.
 ; http://php.net/asp-tags
@@ -369,7 +369,7 @@ expose_php = Off
 ; Maximum execution time of each script, in seconds
 ; http://php.net/max-execution-time
 ; Note: This directive is hardcoded to 0 for the CLI SAPI
-max_execution_time = 30
+max_execution_time = 120
 
 ; Maximum amount of time each script may spend parsing request data. It's a good
 ; idea to limit this time on productions servers in order to eliminate unexpectedly
@@ -379,7 +379,7 @@ max_execution_time = 30
 ; Development Value: 60 (60 seconds)
 ; Production Value: 60 (60 seconds)
 ; http://php.net/max-input-time
-max_input_time = 60
+max_input_time = 120
 
 ; Maximum input variable nesting level
 ; http://php.net/max-input-nesting-level
@@ -535,7 +535,7 @@ track_errors = Off
 ; Development Value: On
 ; Production value: On
 ; http://php.net/html-errors
-html_errors = On
+html_errors = Off
 
 ; If html_errors is set to On *and* docref_root is not empty, then PHP
 ; produces clickable error messages that direct to a page describing the error
@@ -619,7 +619,7 @@ variables_order = "GPCS"
 ; Development Value: "GP"
 ; Production Value: "GP"
 ; http://php.net/request-order
-request_order = "GP"
+; request_order = "GP"
 
 ; This directive determines whether PHP registers $argv & $argc each time it
 ; runs. $argv contains an array of all the arguments passed to PHP when a script
@@ -657,7 +657,7 @@ auto_globals_jit = On
 ; Its value may be 0 to disable the limit. It is ignored if POST data reading
 ; is disabled through enable_post_data_reading.
 ; http://php.net/post-max-size
-post_max_size = 8M
+post_max_size = 16M
 
 ; Automatically add files before PHP document.
 ; http://php.net/auto-prepend-file
@@ -989,7 +989,7 @@ smtp_port = 25
 ;mail.force_extra_parameters =
 
 ; Add X-PHP-Originating-Script: that will include uid of the script followed by the filename
-mail.add_x_header = On
+mail.add_x_header = Off
 
 ; The path to a log file that will log all mail() calls. Log entries include
 ; the full path of the script, line number, To address and headers.
