sshconf: Make SSH config use relative path for IDs
Set up your own 'ssh_ids' directory to make this work.

--- a/roles/sshconf/templates/ssh_config.j2
+++ b/roles/sshconf/templates/ssh_config.j2
@@ -9,7 +9,7 @@ Host {{ host }}
     Hostname {{ hv['real_host'] }}
 {% endif %}
 {% if 'identity_file' in hv %}
-    IdentityFile ~/.ssh/id_{{ hv['identity_file'] }}
+    IdentityFile ssh_ids/id_{{ hv['identity_file'] }}
 {% endif %}
 
 {% endfor %}
