--- a/roles/sshconf/templates/ssh_config.j2
+++ b/roles/sshconf/templates/ssh_config.j2
@@ -1,4 +1,7 @@
+Host *
+    UserKnownHostsFile ssh_known_hosts
 {% for host in groups.servers + groups.desktops %}
+
 {% set hv = hostvars[host] %}
 Host {{ host }}
     User root
@@ -11,5 +14,4 @@ Host {{ host }}
 {% if 'identity_file' in hv %}
     IdentityFile ssh_ids/id_{{ hv['identity_file'] }}
 {% endif %}
-
 {% endfor %}
