--- a/roles/common/macros/interfaces.j2
+++ b/roles/common/macros/interfaces.j2
@@ -16,8 +16,13 @@
 {% macro extra_ips(interface) %}
 {% if interface.extra_ips is defined %}
 {% for extra_ip in interface.extra_ips %}
-    up ip addr add {{ extra_ip }}/32 dev {{ interface.name }}
-    down ip addr del {{ extra_ip }}/32 dev {{ interface.name }}
+{%- if extra_ip.find('/') >= 0 %}
+    {% set extra_netmask = '' %}
+{% else %}
+    {% set extra_netmask = '/32' %}
+{% endif -%}
+    up ip addr add {{ extra_ip }}{{ extra_netmask }} dev {{ interface.name }}
+    down ip addr del {{ extra_ip }}{{ extra_netmask }} dev {{ interface.name }}
 {% endfor %}
 {% endif %}
 {% endmacro -%}
