--- a/roles/dirvish/templates/master.conf.j2
+++ b/roles/dirvish/templates/master.conf.j2
@@ -20,7 +20,7 @@ expire-rule:
         *   *     1-7 1,4,7,10  1    +1 year
 
 Runall:
-{% for host in (groups.vms + groups.vmhosts + groups.external_hosts)|sort %}
+{% for host in groups[backup_hostgroup]|sort %}
     {{ host }}-root
 {% for vol in hostvars[host].extra_volumes|default([]) %}
 {% if vol.backup_exclude is not defined or not vol.backup_exclude %}
