--- a/roles/csynclsync/templates/csync2.cfg.j2
+++ b/roles/csynclsync/templates/csync2.cfg.j2
@@ -10,6 +10,10 @@ group {{ mirror_hostgroup }}
         include {{ tree }};
 {% endfor %}
 
+{% for exclude in csync2_exclude|default([]) %}
+        exclude {{ exclude }};
+{% endfor %}
+
         auto none;
 
 ##      left in here for future reference
