common: Various improvements and cleanup

--- a/roles/common/macros/network.j2
+++ b/roles/common/macros/network.j2
@@ -3,6 +3,6 @@
 {% if interface.address is defined %}
     {{- interface.address -}}
 {% else %}
-    {{- networks[interface.network].prefix + hostvars[host].ipnum|string -}}
+    {{- networks[interface.network].network|ipaddr(hostvars[host].ipnum + hostvars[host].ipoffset|default(0) )|ipaddr('address') -}}
 {% endif %}
 {% endmacro %}
