--- a/roles/common/macros/interfaces.j2
+++ b/roles/common/macros/interfaces.j2
@@ -1,15 +1,28 @@
-{% macro gateway (interface, host) %}
-{% if interface.gateway is defined and interface.gateway is not none %}
-    gateway {{ interface.gateway }}
-{% elif interface.gateway is not defined and interface.network is defined and networks[interface.network].master != host and networks[interface.network].gateway is defined %}
-    gateway {{ networks[interface.network].gateway }}
-{% endif %}
+#jinja2: lstrip_blocks: True, trim_blocks: True
+{% macro gateway (interface, host, prefix) %}
+    {% if interface.gateway is defined and interface.gateway is not none %}
+        {% set gateway_ip = interface.gateway %}
+    {% elif interface.gateway is not defined and interface.network is defined and networks[interface.network].gateway is defined %}
+        {% set gateway_ip = networks[interface.network].gateway %}
+    {% else %}
+        {% set gateway_ip = None %}
+    {% endif %}
+    {% if gateway_ip %}
+        {% set subnet = interface_address(interface, inventory_hostname, prefix) %}
+        {% if prefix == 32 or not gateway_ip|ipaddr(subnet) %}
+    up ip route add {{ gateway_ip }}/32 dev {{ interface.name }}
+    up ip route add default via {{ gateway_ip }}
+    down ip route del default via {{ gateway_ip }}
+    down ip route del {{ gateway_ip }}/32 dev {{ interface.name }}
+        {% else %}
+    gateway {{ gateway_ip }}
+        {% endif %}
+    {% endif %}
 {% endmacro -%}
 
 {% macro bridge_ports(interface) %}
 {% if interface.bridge_ports is defined %}
     bridge_ports {{ interface.bridge_ports }}
-    bridge_maxwait 5
 {% endif %}
 {% endmacro -%}
 
@@ -36,11 +49,17 @@
 {% endif %}
 {% endmacro -%}
 
-{% macro routes(interface) %}
+{% macro routes(interface, address) %}
 {% if interface.routes is defined %}
 {% for route in interface.routes %}
     up ip route add {{ route }} dev {{ interface.name }}
     down ip route del {{ route }} dev {{ interface.name }}
+{% endfor %}
+{% endif %}
+{% if interface.network is defined and networks[interface.network].routes is defined %}
+{% for route_network, route_via in networks[interface.network].routes.items() if route_via != address|ipaddr('address') %}
+    up ip route add {{ route_network }} via {{ route_via }} dev {{ interface.name }}
+    down ip route del {{ route_network }} via {{ route_via }} dev {{ interface.name }}
 {% endfor %}
 {% endif %}
 {% endmacro -%}
@@ -56,10 +75,10 @@ iface {{ interface.name }} inet6 static
 {% endif %}
 {% endmacro -%}
 
-{% macro interface_address(interface, host) %}
-{% if interface.address is defined %}
-{{ interface.address }}/{{ networks[interface.network].mask }}
-{% else %}
-{{ networks[interface.network].prefix + hostvars[host]['ipnum']|string + '/' + networks[interface.network].mask|string }}
-{% endif %}
+{% macro interface_address(interface, host, prefix) %}
+    {% if interface.address is defined %}
+{{ interface.address }}/{{ prefix }}
+    {% elif interface.network is defined and networks[interface.network].network is defined %}
+{{ networks[interface.network].network|ipaddr(hostvars[host]['ipnum'] + hostvars[host]['ipoffset']|default(0)) }}
+    {% endif %}
 {% endmacro -%}
