--- a/roles/vmhost_guests/templates/interfaces.j2
+++ b/roles/vmhost_guests/templates/interfaces.j2
@@ -1,4 +1,4 @@
-# {{ ansible_managed }}
+#jinja2: lstrip_blocks: True, trim_blocks: True
 {% from "./roles/common/macros/interfaces.j2" import gateway, bridge_ports, extra_ips, routes, ipv6, interface_address with context %}
 
 auto lo
@@ -6,18 +6,26 @@ iface lo inet loopback
 {% for vinterface in hostvars[vm_name]['interfaces'] %}
 
 auto {{ vinterface.name }}
-{% if vinterface.address is defined or vinterface.network is defined %}
+    {% if vinterface.address is defined or vinterface.network is defined %}
+        {% if vinterface.prefix is defined %}
+            {% set prefix = vinterface.prefix %}
+        {% elif vinterface.network is defined and networks[vinterface.network].network is defined %}
+            {% set prefix = networks[vinterface.network].network|ipsubnet|ipaddr('prefix') %}
+        {% else %}
+            {% set prefix = 32 %}
+        {% endif %}
+	{% set address = interface_address(vinterface, vm_name, prefix) %}
 iface {{ vinterface.name }} inet static
-    address {{ interface_address(vinterface, vm_name) -}}
-{% else %}
+    address {{ interface_address(vinterface, vm_name, prefix) -}}
+    {% else %}
 iface {{ vinterface.name }} inet manual
-{% endif %}
-{{ gateway(vinterface, vm_name) -}}
-{% if vinterface.proxy_arp|default(False) %}
+    {% endif %}
+{{ gateway(vinterface, vm_name, prefix) -}}
+    {% if vinterface.proxy_arp|default(False) %}
     up echo 1 >/proc/sys/net/ipv4/conf/{{ vinterface.name }}/proxy_arp
-{% endif %}
+    {% endif %}
 {{ bridge_ports(vinterface) -}}
 {{ extra_ips(vinterface) -}}
-{{ routes(vinterface) -}}
+{{ routes(vinterface, address) -}}
 {{ ipv6(vinterface) -}}
 {% endfor %}
